# docs/openapi/schema/wallet.ts
@@ -1,3 +1,5 @@
+import { z } from "zod/v4";
+
 import { publicWalletSchema } from "@/features/wallets/wallet-mapper";
 import {
   createWalletSchema,
@@ -6,6 +8,7 @@ import {
 
 export const walletSchemas = {
   Wallet: publicWalletSchema,
+  WalletList: z.array(publicWalletSchema),
   CreateWalletRequest: createWalletSchema,
   // CreateWalletResponse: publicWalletSchema,
   UpdateWalletRequest: updateWalletSchema,
